# macros_learn

./: Cargo.toml
basic/: Cargo.toml
basic/examples/: generate.rs  sql.rs
basic/fixtures/: person1.json  person2.json
basic/src/: json_schema.rs  lib.rs
basic/templates/: code.j2
builder/: Cargo.toml
builder/examples/: command.rs
builder/src/: builder.rs  lib.rs
