[package]
name = "basic"
version = "0.1.0"
edition = "2021"
[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1"
heck = "0.4"
askama = "0.11"
litrs = "*"
